# babylon-compiler

./: COL_Master_Spec.tex  Cargo.toml  README.md  hanlan_babylon_spec.tex  sanskroot_blueprint_overleaf_xelatex_fontfix.tex
crates/glyph-bundle/: Cargo.toml
crates/glyph-bundle/src/: lib.rs
crates/glyph-canon/: Cargo.toml
crates/glyph-canon/src/: lib.rs
crates/glyph-capsule/: Cargo.toml
crates/glyph-capsule/src/: lib.rs
crates/glyph-cli/: Cargo.toml
crates/glyph-cli/src/: main.rs
crates/glyph-crystal/: Cargo.toml
crates/glyph-crystal/src/: lib.rs
crates/glyph-embed/: Cargo.toml
crates/glyph-embed/src/: lib.rs
crates/glyph-epoch/: Cargo.toml
crates/glyph-epoch/src/: lib.rs
crates/glyph-expand/: Cargo.toml
crates/glyph-expand/src/: lib.rs
crates/glyph-frontends/: Cargo.toml
crates/glyph-frontends/src/: lib.rs
crates/glyph-frontends/src/cuneiform/: lexer.rs  lower.rs  mod.rs  parser.rs
crates/glyph-frontends/src/hanlan/: lexer.rs  lower.rs  mod.rs  parser.rs
crates/glyph-frontends/src/sanskroot/: lexer.rs  lower.rs  mod.rs  parser.rs
crates/glyph-gate/: Cargo.toml
crates/glyph-gate/src/: lib.rs
crates/glyph-ir/: Cargo.toml
crates/glyph-ir/src/: lib.rs
crates/glyph-mef/: Cargo.toml
crates/glyph-mef/src/: lib.rs
crates/glyph-mutate/: Cargo.toml
crates/glyph-mutate/src/: lib.rs
crates/glyph-q16/: Cargo.toml
crates/glyph-q16/src/: lib.rs
crates/glyph-rd/: Cargo.toml
crates/glyph-rd/src/: lib.rs
crates/glyph-registry/: Cargo.toml
crates/glyph-registry/src/: lib.rs
crates/glyph-tic/: Cargo.toml
crates/glyph-tic/src/: lib.rs
crates/glyph-verify/: Cargo.toml
crates/glyph-verify/src/: lib.rs
examples/: hello.col  hello.hnln
tests/golden/: tv1.col  tv1.sk  tv2.col  tv2.sk  tv3.col  tv3.sk
