[package]
name = "glyph-epoch"
version = "0.2.0"
edition = "2021"

[dependencies]
glyph-q16 = { path = "../glyph-q16" }
glyph-canon = { path = "../glyph-canon" }
glyph-registry = { path = "../glyph-registry" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
