[package]
name = "glyph-gate"
version = "0.2.0"
edition = "2021"

[dependencies]
glyph-q16 = { path = "../glyph-q16" }
glyph-ir = { path = "../glyph-ir" }
glyph-embed = { path = "../glyph-embed" }
glyph-registry = { path = "../glyph-registry" }
serde = { workspace = true }
serde_json = { workspace = true }
