[package]
name = "glyph-mutate"
version = "0.2.0"
edition = "2021"

[dependencies]
glyph-q16 = { path = "../glyph-q16" }
glyph-canon = { path = "../glyph-canon" }
glyph-registry = { path = "../glyph-registry" }
glyph-epoch = { path = "../glyph-epoch" }
glyph-gate = { path = "../glyph-gate" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
